cmake_minimum_required(VERSION 3.15)
project(battaglia_navale)

include_directories(include)

add_library(Utility src/Utility.cpp)
add_library(Position src/Position.cpp)
add_library(AttackGrid src/AttackGrid.cpp)
add_library(DefenseUnit src/DefenseUnit.cpp)
add_library(DefenseMap src/DefenseMap.cpp)
add_library(Ship src/Ship.cpp)
add_library(Ironclad src/Ironclad.cpp)
add_library(SupportShip src/SupportShip.cpp)
add_library(Submarine src/Submarine.cpp)
add_library(Player src/Player.cpp)
add_library(RobotPlayer src/RobotPlayer.cpp)
add_library(HumanPlayer src/HumanPlayer.cpp)
add_library(Move src/Move.cpp)
add_library(Game src/Game.cpp)
add_library(FileWriter src/FileWriter.cpp)
add_library(ReplayGame src/Replay.cpp)

add_executable(${PROJECT_NAME} src/main.cpp)
add_executable(replay src/main_replay.cpp)

target_link_libraries(${PROJECT_NAME} Game FileWriter ReplayGame RobotPlayer HumanPlayer Ironclad SupportShip Submarine Player Ship AttackGrid DefenseMap DefenseUnit Move Utility Position)
target_link_libraries(replay Game FileWriter ReplayGame RobotPlayer HumanPlayer Ironclad SupportShip Submarine Player Ship AttackGrid DefenseMap DefenseUnit Move Utility Position)